@@ -15,6 +15,7 @@ return array(
 		'Profile history' => 'Profilverlauf',
 		'Profile number' => 'Profilnummer: ',
 		'View my messages' => 'Meine Nachrichten ansehen',
+		'You have new messages!' => 'Sie haben neue Nachrichten!',
 		'Manage profiles' => 'Profile verwalten',
 		'Manage profile fields' => 'Profilfelder verwalten',
 		'Manage profile field groups' => 'Profilfeldgruppen verwalten',
@@ -106,9 +107,9 @@ return array(
 		'E-mail' => 'E-mail',
 		'Verification Code' => 'Verification Code',
 		'Select multiple recipients by holding the CTRL key', 'Wählen Sie mehrere Empfänger mit der STRG-Taste aus',
-		'Retype Password' => 'Passwort wiederholen',
+		'Retype password' => 'Passwort wiederholen',
 		'Message from ' => 'Nachricht von ',
-		'Write another Message' => 'Eine weitere Nachricht schreiben',
+		'Write another message' => 'Eine weitere Nachricht schreiben',
 		'Retype Password is incorrect.' => 'Wiederholtes Passwort ist falsch.',
 		'Incorrect password (minimal length 4 symbols).' => 'Falsches Passwort (minimale Länge 4 Zeichen).',
 		'Incorrect username (length between 3 and 20 characters).' => 'Falscher Benutzername (Länge zwischen 3 und 20 Zeichen).',
